Juste pour tester la maj d'un fichier

--- a/MindLess.html
+++ b/MindLess.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="MindLess.css">
+        <link rel="stylesheet" type="text/css" href="MindLessV1.css">
         <title>MindLess- Moins de charge mentale</title>
     </head>
     <body>
