--- a/MindLess.html
+++ b/MindLess.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="MindLessV1.css">
-        <title>MindLess- Moins de charge mentale</title>
+        <link rel="stylesheet" type="text/css" href="MindLess.css">
+        <title>MindLess- Moins de charge mentale - Beta</title>
     </head>
     <body>
         <div id="bloc_page"> <!-- le contenu de la page est placé dans une grande balise<div>ayant pour id "bloc_page" (on l'appelle aussi parfoismain_wrapperen anglais). Cette balise englobe tout le contenu, ce qui va nous permettre de fixer facilement les dimensions de la page et de centrer notre site à l'écran.-->
